# video-mask-painter

./: MANIFEST.in  README.md  flake.nix  pyproject.toml
src/video_mask_painter/: action.py  asynctk.py  bar_scale.py  color_picker.py  main.py  project.py  timeline.py  util.py  video_canvas.py  video_export.py
